--- a/index.html
+++ b/index.html
@@ -1,41 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Challenge - DOM</title>
-  </head>
-  <body>
-    <div id="app">
-      <!-- TODO: Buatlah sebuah header dengan id todo-title -->
-      <!-- TODO: Buatlah sebuah subtitle dengan id todo-subtitle -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Challenge - DOM</title>
+		<link rel="stylesheet" href="./assets/styles/todo.css" />
+	</head>
+	<body>
+		<div id="app">
+			<header>
+				<!-- TODO: Buatlah sebuah header dengan id todo-title -->
+				<h1 id="todo-title">To-Do List</h1>
+				<!-- TODO: Buatlah sebuah subtitle dengan id todo-subtitle -->
+				<p id="todo-subtitle">~ Today I need to ~</p>
+			</header>
 
-      <!-- Section: input -->
-      <!-- TODO: Buatlah sebuah input bertipe text dengan id todo-input -->
-      <!-- TODO: Buatlah sebuah button dengan id todo-submit -->
+			<section class="controller">
+				<!-- Section: input -->
+				<!-- TODO: Buatlah sebuah input bertipe text dengan id todo-input -->
+				<input
+					type="text"
+					autofocus="true"
+					autocomplete="off"
+					id="todo-input"
+					placeholder="Masukkan todo"
+					aria-placeholder="masukkan todo"
+				/>
+				<!-- TODO: Buatlah sebuah button dengan id todo-submit -->
+				<button type="button" id="todo-submit">Submit</button>
+			</section>
 
-      <!-- Section output -->
-      <!-- TODO: Buatlah sebuah <ul> dengan id todo-output -->
-    </div>
+			<section>
+				<!-- Section output -->
+				<!-- TODO: Buatlah sebuah <ul> dengan id todo-output -->
+				<ul id="todo-output"></ul>
+			</section>
+		</div>
 
-    <!-- ! Untuk tantangan ini, script jangan diubah ke external js yah ! -->
-    <script>
-      // TODO: Deklarasi variable sesuai dengan kebutuhan di sini
-      let button;
-      let input;
-      let output;
+		<!-- ! Untuk tantangan ini, script jangan diubah ke external js yah ! -->
+		<script>
+			// TODO: Deklarasi variable sesuai dengan kebutuhan di sini
+			let button = document.querySelector('#todo-submit');
+			let input = document.querySelector('#todo-input');
+			let output = document.querySelector('#todo-output');
 
-      // TODO: Buatlah sebuah fungsi dengan nama fnClickHandler
-      // Fungsi yang digunakan untuk menambahkan tulisan
-      // Jangan ubah cara deklarasi fungsinya, cukup isi saja
-      function fnClickHandler(toDoItem) {}
+			// TODO: Buatlah sebuah fungsi dengan nama fnClickHandler
+			// Fungsi yang digunakan untuk menambahkan tulisan
+			// Jangan ubah cara deklarasi fungsinya, cukup isi saja
+			function fnClickHandler(toDoItem) {
+				if (toDoItem.type === 'keypress' && toDoItem.charCode === 13) {
+					let li = document.createElement('li');
+					li.innerText =
+						toDoItem.target.value === '' ? '-' : toDoItem.target.value;
+					output.appendChild(li);
+					input.value = '';
+				} else if (toDoItem.type === 'click') {
+					let li = document.createElement('li');
+					li.innerText = input.value === '' ? '-' : input.value;
+					output.appendChild(li);
+					input.value = '';
+				}
+			}
 
-      // TODO: register event onclick / addEventListener untuk button
-      // akan menjalankan fungsi fnClickHandler
-      
-      // TODO: register event onkeypress / addEventListener untuk input
-      // sehingga saat di input ditekan enter akan menjalankan fungsi fnClickHandler juga
-    </script>
-  </body>
+			// TODO: register event onclick / addEventListener untuk button
+			// akan menjalankan fungsi fnClickHandler
+			button.addEventListener('click', fnClickHandler);
+			// TODO: register event onkeypress / addEventListener untuk input
+			// sehingga saat di input ditekan enter akan menjalankan fungsi fnClickHandler juga
+			input.addEventListener('keypress', fnClickHandler);
+		</script>
+	</body>
 </html>
